--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <div id="header">
           <div class="container">
                <nav>
-                    <img src="images/nyipheadshot.png" class="logo">
+                    <img src="images/logo.jpg" class="logo">
                     <ul id="sidemenu">
                          <li><a href="#header">Home</a></li>
                          <li><a href="#about">About</a></li>
@@ -36,7 +36,7 @@
           <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                         <img src="images/nyipheadshot.png" >
+                         <img src="images/photo.jpg" >
                     </div>
                     <div class="about-col-2">
                          <h1 class="sub-title">About Me</h1>
@@ -98,7 +98,7 @@
                     </div>
                     <div>
                          <i>#</i>
-                         <h2>Pen Tester</h2>
+                         <h2>Automation Engineer</h2>
                          <p>Lorem ipsum dolor sit amet,
                                consectetur adipisicing elit. Animi, est.</p>
                          <a href="#">Learn more</a>
@@ -114,27 +114,27 @@
                <h1 class="sub-title">My Work</h1>
                <div class="work-list">
                     <div class="work">
-                         <img src="images/nyipheadshot.png" >
+                         <img src="images/cake.jpg" >
                          <div class="layer">
-                              <h3>Speaking Confidently</h3>
+                              <h3>Sumptious Cakes</h3>
+                              <p>Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Consequatur, ad.</p>
+                              <a href="#"><i>#</i></a>     
+                         </div>
+                    </div>
+                    <div class="work">
+                         <img src="images/community.jpg" >
+                         <div class="layer">
+                              <h3>Community Lead</h3>
                               <p>Lorem ipsum dolor, sit amet consectetur 
                                    adipisicing elit. Necessitatibus, perferendis?</p>
                               <a href="#"><i>#</i></a>     
                          </div>
                     </div>
                     <div class="work">
-                         <img src="images/nyipheadshot.png" >
+                         <img src="images/enginegirl.jpg" >
                          <div class="layer">
-                              <h3>Building Apps</h3>
-                              <p>Lorem ipsum dolor, sit amet consectetur 
-                                   adipisicing elit. Necessitatibus, perferendis?</p>
-                              <a href="#"><i>#</i></a>     
-                         </div>
-                    </div>
-                    <div class="work">
-                         <img src="images/nyipheadshot.png" >
-                         <div class="layer">
-                              <h3>Pen Testing</h3>
+                              <h3>Engineering</h3>
                               <p>Lorem ipsum dolor, sit amet consectetur 
                                    adipisicing elit. Necessitatibus, perferendis?</p>
                               <a href="#"><i>#</i></a>     
