--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Personal portfolio</title>
      <link rel="stylesheet" href="styles.css">
-     <script></script>
+     <script src="https://kit.fontawesome.com/ae00ea32d7.js" crossorigin="anonymous"></script>
 </head>
 <body>
      <!-- start of header section -->
@@ -19,9 +19,9 @@
                          <li><a href="#services">Services</a></li>
                          <li><a href="#portfolio">Portfolio</a></li>
                          <li><a href="#contact">Contact</a></li>
-                         <!-- <i class="fas" onclick="closemenu()">*</i> -->
+                         <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                     </ul>
-                    <!-- <i class="fas" onclick="openmenu()">#</i> -->
+                    <i class="fa-solid fa-bars" onclick="openmenu()"></i>
                </nav>
                <div class="header-text">
                     <p>Frontend dev</p>
@@ -83,21 +83,21 @@
                <h1 class="sub-title">My Services</h1>
                <div class="services-list">
                     <div>
-                         <i>#</i>
+                         <i class="fa-solid fa-code"></i>
                          <h2>Frontend Dev</h2>
                          <p>Lorem ipsum dolor sit amet,
                                consectetur adipisicing elit. Animi, est.</p>
                          <a href="#">Learn more</a>
                     </div>
                     <div>
-                         <i>#</i>
+                         <i class="fa-solid fa-people-pulling"></i>
                          <h2>Ambassador</h2>
                          <p>Lorem ipsum dolor sit amet,
                                consectetur adipisicing elit. Animi, est.</p>
                          <a href="#">Learn more</a>
                     </div>
                     <div>
-                         <i>#</i>
+                         <i class="fa-brands fa-wpbeginner"></i>
                          <h2>Automation Engineer</h2>
                          <p>Lorem ipsum dolor sit amet,
                                consectetur adipisicing elit. Animi, est.</p>
@@ -119,7 +119,7 @@
                               <h3>Sumptious Cakes</h3>
                               <p>Lorem ipsum dolor sit amet consectetur
                                     adipisicing elit. Consequatur, ad.</p>
-                              <a href="#"><i>#</i></a>     
+                              <a href="#"><i class="fa-solid fa-link"></i></a>     
                          </div>
                     </div>
                     <div class="work">
@@ -128,7 +128,7 @@
                               <h3>Community Lead</h3>
                               <p>Lorem ipsum dolor, sit amet consectetur 
                                    adipisicing elit. Necessitatibus, perferendis?</p>
-                              <a href="#"><i>#</i></a>     
+                              <a href="#"><i class="fa-solid fa-link"></i></a>     
                          </div>
                     </div>
                     <div class="work">
@@ -137,7 +137,7 @@
                               <h3>Engineering</h3>
                               <p>Lorem ipsum dolor, sit amet consectetur 
                                    adipisicing elit. Necessitatibus, perferendis?</p>
-                              <a href="#"><i>#</i></a>     
+                              <a href="#"><i class="fa-solid fa-link"></i></a>     
                          </div>
                     </div>
                </div>
@@ -152,13 +152,13 @@
                <div class="row">
                     <div class="contact-left">
                          <h1 class="sub-title">Contact Me</h1>
-                         <p><i>%</i>nyip2019@gmail.com</p>
-                         <p><i>%</i>07067275191</p>
+                         <p><i class="fa-solid fa-paper-plane"></i>nyip2019@gmail.com</p>
+                         <p><i class="fa-solid fa-phone"></i>07067275191</p>
                          <div class="social-icons">
-                              <a href="#"><i>#</i></a>
-                              <a href="#"><i>#</i></a>
-                              <a href="#"><i>#</i></a>
-                              <a href="#"><i>#</i></a>
+                              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                              <a href="#"><i class="fa-brands fa-github"></i></a>
                          </div>
                          <a href="images/nyipheadshot.png" download class="btn btn2">Download CV</a>
                     </div>
@@ -196,7 +196,7 @@
      </script>
 
      <script>
-          var sidemenu = document.getElementById(sidemenu)
+          var sidemenu = document.getElementById("sidemenu")
           
           function openmenu(){
                sidemenu.style.right = "0";
